// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The InputFieldValidation component should apply the correct offset class 1`] = `
<div
  className="layout__item u-full input-field__validation"
>
  <div
    className="layout"
  >
    <div
      className="layout__item u-1/3-sm"
    />
    <div
      className="layout__item u-fill "
    >
      <div
        className="input-field__error-message"
      >
        Validation error
      </div>
    </div>
  </div>
</div>
`;

exports[`The InputFieldValidation component should apply the correct offset class for the required icon 1`] = `
<div
  className="layout__item u-full input-field__validation"
>
  <div
    className="layout"
  >
    <div
      className="layout__item u-fill text-right offset-for-required"
    >
      <div
        className="input-field__error-message"
      >
        Validation error
      </div>
    </div>
  </div>
</div>
`;

exports[`The InputFieldValidation component should apply the correct positional class 1`] = `
<div
  className="layout__item u-full input-field__validation"
>
  <div
    className="layout"
  >
    <div
      className="layout__item u-fill text-right"
    >
      <div
        className="input-field__error-message"
      >
        Validation error
      </div>
    </div>
  </div>
</div>
`;

exports[`The InputFieldValidation component should render 1`] = `
<div
  className="layout__item u-full input-field__validation"
>
  <div
    className="layout"
  >
    <div
      className="layout__item u-fill "
    >
      <div
        className="input-field__error-message"
      >
        Validation error
      </div>
    </div>
  </div>
</div>
`;
